--- a/.github/workflows/test-action.yaml
+++ b/.github/workflows/test-action.yaml
@@ -25,3 +25,5 @@ jobs:
           compose: 'apollo-server/docker-compose.yaml'
           schema: 'apollo-server/products.graphql'
           debug: true
+      - name: Debug
+        run: cat supergraph-config.yaml
