--- a/.github/workflows/test-action.yaml
+++ b/.github/workflows/test-action.yaml
@@ -29,3 +29,4 @@ jobs:
         run: |
           cat supergraph-config.yaml
           ls node_modules/binary-install/node_modules/.bin
+          node_modules/binary-install/node_modules/.bin/rover --version
