--- a/.github/workflows/test-action.yaml
+++ b/.github/workflows/test-action.yaml
@@ -19,6 +19,8 @@ jobs:
         with:
           node-version: 18
           cache: 'npm'
+      - name: Install
+        run: npm install
       - name: Run action
         uses: ./
         with:
