--- a/.github/workflows/test-action.yaml
+++ b/.github/workflows/test-action.yaml
@@ -20,7 +20,9 @@ jobs:
           node-version: 18
           cache: 'npm'
       - name: Install
-        run: npm install
+        run: |
+          rm -rf node_modules
+          npm install
       - name: Run action
         uses: ./
         with:
